Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-51295

Fix compilation warnings on OSX

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.6.2
    • 5.6
    • WebEngine
    • None
    • Qt 5.6, OSX 10.11, Xcode 7.2
    • macOS
    • 31d568295a2d8dcfe12ff62348aa768c75d2dfe7

    Description

      Fix warnings like

      ./qtwebengine/src/webengine/api/qquickwebengineview_p.h:319:10: warning: 'geometryChanged' overrides a member function but is not marked 'override'
            [-Winconsistent-missing-override]
          void geometryChanged(const QRectF &newGeometry, const QRectF &oldGeometry);
      

      Attachments

        For Gerrit Dashboard: QTBUG-51295
        # Subject Branch Project Status CR V

        Activity

          People

            jbornema Joerg Bornemann
            alexandru.croitor Alexandru Croitor
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes