Add missing Q_DECL_OVERRIDE specifiers.

Fixes warnings when building with clang.

Task-number: QTBUG-51295
Change-Id: I4ede7e4ea5c1c3924b3bba852834b8066b539825
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>